--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -38,4 +38,8 @@
         <item name="android:textAlignment">center</item>
     </style>
 
+    <style name="DetailsTemperatureData" parent="WeatherInfoTextViewTitle">
+        <item name="android:textSize">14sp</item>
+    </style>
+
 </resources>
