--- a/app/src/main/res/layout/fragment_details_layout.xml
+++ b/app/src/main/res/layout/fragment_details_layout.xml
@@ -14,7 +14,7 @@
         app:layout_constraintRight_toRightOf="parent">
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:background="@drawable/background">
 
             <TextView
@@ -73,7 +73,7 @@
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tvSunrise"
                 android:layout_marginTop="20dp"
-                android:text="@string/temperature"/>
+                android:text="@string/temperatureDeg"/>
 
             <HorizontalScrollView
                 android:id="@+id/hsvTemperature"
